--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -1,3 +1,4 @@
+
 #login{
     background-color: #24499F;
     color: white;
@@ -6,4 +7,16 @@
     width: 80%;
     height:80%;
     margin: 10%;
+    alignment: center;
+
+}
+#logo{
+    display:block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 40%;
+}
+#login_form{
+    display:block;
+    margin: auto;
 }
