--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -4,19 +4,33 @@
     color: white;
     opacity: 0.8;
     text-align: center;
-    width: 80%;
-    height:80%;
-    margin: 10%;
+    width: 400px;
+    height: 400px;
     alignment: center;
+    position:fixed;
+    Left:50%;
+    top:65%;
+    margin-top: -200px;
+    margin-left: -200px;
+    padding: 25px;
 
 }
+
+
+
 #logo{
     display:block;
     margin-left: auto;
     margin-right: auto;
     width: 40%;
 }
-#login_form{
-    display:block;
-    margin: auto;
+
+@media only screen and (max-width:600px) {
+ #login{
+     width:100%;
+     height:100%;
+     margin:0;
+     position:static;
+ }
+
 }
