--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -15,6 +15,10 @@
     top: 65%;
 }
 
+#dash {
+    background-color: slategray;
+}
+
     @media only screen and (max-width:750px) {
         #login{
             width: 100%;
