Save me, this is a cry for help #crypicker

--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -187,13 +187,16 @@ body.hide-sidedrawer #footer {
 .watermark{
     opacity:0.4;
     height: 10px;
+.modal-content
     position: fixed;
     bottom: 110px;
     right: 10px;
 }
 
+.modal{
+    height: 500px;
+}
 
-
-.modal-content{
-    color:black;
+.modal .modal-content{
+    color: black;
 }
